Intégration de NgRx pour la gestion des utilisateurs
- Ajout des fichiers NgRx :
  - store/user/user.actions.ts
  - store/user/user.effects.ts
  - store/user/user.reducer.ts
  - store/user/user.selectors.ts
  - store/user/user.state.ts
- Modification de l'authentification :
  - login.component.html et login.component.ts adaptés à NgRx
- Mise à jour de app.config.ts pour inclure le store NgRx
- Mises à jour de package.json et package-lock.json pour NgRx

--- a/recycle-hub/src/app/features/auth/login/login.component.html
+++ b/recycle-hub/src/app/features/auth/login/login.component.html
@@ -67,11 +67,14 @@
     </div>
   
     <!-- Bouton de soumission -->
-    <button type="submit" [disabled]="userForm.invalid">Ajouter</button>
+    <button type="submit" [disabled]="userForm.invalid">
+        {{ currentUserId ? 'Modifier' : 'Ajouter' }}
+      </button>
   </form>
   
   <!-- Liste des utilisateurs -->
-  <div *ngFor="let user of users">
+  <div *ngFor="let user of users$ | async">
     <p>{{ user.firstName }} {{ user.lastName }} - {{ user.email }}</p>
+    <!-- <button (click)="editUserById(user.id)">Modifier</button> -->
     <button (click)="deleteUser(user.id)">Supprimer</button>
   </div>
