--- a/recycle-hub/src/app/features/auth/login/login.component.html
+++ b/recycle-hub/src/app/features/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="userForm" (ngSubmit)="addUser()">
+<form [formGroup]="userForm" (ngSubmit)="submitUser()">
     <!-- Email -->
     <div>
       <label>Email :</label>
@@ -68,13 +68,14 @@
   
     <!-- Bouton de soumission -->
     <button type="submit" [disabled]="userForm.invalid">
-        {{ currentUserId ? 'Modifier' : 'Ajouter' }}
-      </button>
+      {{ selectedUserId ? 'Modifier' : 'Ajouter' }}
+    </button>
   </form>
   
   <!-- Liste des utilisateurs -->
   <div *ngFor="let user of users$ | async">
     <p>{{ user.firstName }} {{ user.lastName }} - {{ user.email }}</p>
-    <!-- <button (click)="editUserById(user.id)">Modifier</button> -->
+    <button (click)="editUser(user)">Modifier</button>
     <button (click)="deleteUser(user.id)">Supprimer</button>
   </div>
+  
