feat(auth) : mise à jour des routes d'authentification, des composants login et register, et du store utilisateur
- Mise à jour de app.routes.ts pour la gestion des routes d'auth.
- Modification des composants login.component.ts et register.component.html.
- Ajout d'un nouveau composant login (CSS, HTML, TS).
- Mise à jour des actions, effets et réducteurs utilisateur.

--- a/recycle-hub/src/app/features/auth/register/register.component.html
+++ b/recycle-hub/src/app/features/auth/register/register.component.html
@@ -60,6 +60,14 @@
           Le prénom est requis.
         </div>
       </div>
+
+      <div>
+        <label>Rôle :</label>
+        <select formControlName="role">
+          <option value="user">Particulier</option>
+          <option value="collector">Collecteur</option>
+        </select>
+      </div>
   
       <!-- Nom -->
       <div class="mb-4">
